Inserindo Retrofit para consumo de APIs. Arquiterura MVP. Inserindo Android Annotations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidChallenge</string>
+    <string name="qtd_usuarios">Quantidade de Usuarios:</string>
 </resources>
